<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:yourapp="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/miShowDetails"
        android:title="@string/show_details"
        yourapp:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/miCancelTransaction"
        android:title="@string/menu_item_cancel_transaction"
        yourapp:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/miRebroadcastTransaction"
        android:title="@string/menu_item_rebroadcast_transaction"
        yourapp:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/miDeleteUnconfirmedTransaction"
        android:title="@string/menu_item_delete_unconfirmed_transaction"
        yourapp:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/miBumpFee"
        android:title="@string/menu_item_bump_mining_fee"
        yourapp:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/miShare"
        android:title="@string/share_transaction_manually"
        yourapp:showAsAction="ifRoom|withText" />

</menu>