<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:key="myceliumPreferences">

    <ListPreference
            android:key="user_language"
            android:layout="@layout/preference_layout"
            android:title="@string/pref_change_language"/>

    <ListPreference
            android:key="bitcoin_denomination"
            android:layout="@layout/preference_layout"
            android:summary="@string/pref_bitcoin_denomination_summary"
            android:title="@string/pref_bitcoin_denomination"/>
    <ListPreference
            android:key="miner_fee"
            android:layout="@layout/preference_layout"/>
    <ListPreference
            android:key="block_explorer"
            android:layout="@layout/preference_layout"/>

    <!-- Advanced Settings -->

    <PreferenceCategory
            android:key="advancedSettings"
            android:title="@string/pref_advanced_settings">

        <CheckBoxPreference
                android:key="showBip44Path"
                android:layout="@layout/preference_layout"
                android:summary="Show the BIP44 address path for the current address on the homescreen"
                android:title="Show address path"/>
    </PreferenceCategory>

</PreferenceScreen>
