<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/payment_request"
        android:textSize="20sp" />


    <com.mycelium.wallet.widget.QrImageView
        android:id="@+id/ivQrCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/white"
        android:contentDescription="@string/qr_code"
        android:longClickable="false"
        android:maxHeight="@dimen/large_qrcode"
        android:maxWidth="@dimen/large_qrcode"
        android:minHeight="@dimen/large_qrcode"
        android:minWidth="@dimen/large_qrcode" />

    <Button
        android:id="@+id/btShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/share_payment_request" />

    <Button
        android:id="@+id/btnClipboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/copy_to_clipboard" />

</LinearLayout>