<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="20dp"
            android:text="@string/pop_transaction_info"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="15dp"
            android:paddingTop="30dp"
            android:text="@string/pop_transaction_info_advice"
            android:textAlignment="center"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:paddingLeft="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:text="@string/pop_date"
                android:textColor="@color/lightgrey" />

            <TextView
                android:id="@+id/pop_transaction_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:gravity="center_horizontal"
                android:paddingLeft="15dp"
                android:textSize="20sp"
                tools:text="01.08.2015" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:orientation="vertical"
            android:paddingLeft="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:text="@string/pop_amount_title"
                android:textColor="@color/lightgrey" />

            <TextView
                android:id="@+id/pop_transaction_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:paddingLeft="15dp"
                android:textSize="20sp"
                tools:text="12.345mBTC" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:orientation="vertical"
            android:paddingLeft="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:text="@string/transaction_label_title"
                android:textAllCaps="false"
                android:textColor="@color/lightgrey" />

            <TextView
                android:id="@+id/pop_transaction_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:paddingLeft="15dp"
                android:textSize="20sp"
                tools:text="I'm just a label sitting here" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:layout_marginLeft="15dp"
            android:orientation="vertical"
            android:paddingLeft="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center"
                android:paddingTop="10dp"
                android:text="@string/pop_send_pop_to"
                android:textColor="@color/lightgrey" />

            <TextView
                android:id="@+id/pop_recipient_host"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="-10dp"
                android:paddingLeft="15dp"
                android:textSize="30sp"
                tools:text="www.example.com" />
        </LinearLayout>

        <Button
            android:id="@+id/btSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:onClick="sendPop"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/pop_prove"
            android:textSize="20sp" />


        <Button
            android:id="@+id/btSelectOther"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:onClick="selectOtherTransaction"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/pop_select_other_tx"
            android:textSize="20sp" />

    </LinearLayout>
</ScrollView>