<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amount_label"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/tvAmount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:gravity="end"
                android:hint="@string/amount_hint"
                android:lines="1"
                android:singleLine="true"
                android:textSize="22sp"
                android:typeface="monospace" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="3dp"
                android:paddingRight="3dp"
                android:text="@string/btc"
                android:textSize="22sp"
                android:typeface="monospace" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvMaxAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/max_btc"
            android:textSize="18sp"
            android:visibility="gone"
            tools:visibility="visible" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <include
            layout="@layout/number_entry"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />

    </LinearLayout>

    <Button
        android:id="@+id/btOk"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/ok"
        android:textSize="20sp" />

</LinearLayout>