<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!-- Balance -->

    <LinearLayout
        android:id="@+id/llBalance"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/tvBalance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="0dp"
                android:gravity="center_horizontal"
                android:textSize="24sp"
                tools:text="21.000 BTC" />

            <ProgressBar
                android:id="@+id/pbProgress"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:visibility="gone" />
        </FrameLayout>

        <TextView
            android:id="@+id/tvReceiving"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="0dp"
            android:gravity="center_horizontal"
            android:textColor="@color/semidarkgreen"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvSending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="0dp"
            android:gravity="center_horizontal"
            android:textColor="@color/red"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btSend"
            style="@style/MyceliumButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/send"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/btScan"
            style="@style/MyceliumButton"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="fill_parent"
            android:contentDescription="@string/scan_qr_code"
            android:src="@drawable/photo" />

        <Button
            android:id="@+id/btReceive"
            style="@style/MyceliumButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/receive"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>
